--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body cz-shortcut-listen="true">
     <header>
-        <h1>Useless History</h1>
+        <h1>Anime History "Currently Only List"</h1>
     </header>
     <div id="itemes"></div>
 </body>
